[tool.poetry]
name = "slam-graph-optim-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "slam_graph_optim_example"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.15.0"
numpy = "^1.25.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
